[package]
name = "contributor_service"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = { version = "^3.1" }
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
cc_transaction = "0.11.3"
rand = "0.8"
centichain_keypair = "4.0.2"